src/test/resources/success/mixed/Problem.scala
package success.mixed

import forcedtodo.todo

@todo("Should be done by now", "2090-01-01")
class Problem {
}



